@@ -1,3 +1,9 @@
+2005-06-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/about/faq.html (href): small updates.
+
+	* site/about/features.html: edit.
+
 2005-06-22  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
 
 	* fr/about/features: update
